05/21/2005 Bob Rossi <bob@brasko.net>

	* configure.in (AM_INIT_AUTOMAKE): Version update.
	* configure: Autogenerated.

version 0.5.2 (05/21/2005):

05/21/2005 Bob Rossi <bob@brasko.net>

	* FAQ: Change autotool versions.

05/20/2005 Bob Rossi <bob@brasko.net>

	* configure.in (AM_INIT_AUTOMAKE): Version update.
	* configure: Autogenerated.

05/20/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* autoregen.sh: Added line to update out of date files.
	* config/config.guess: Autogenerated.
	* config/config.sub: Autogenerated.

05/20/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Autoconf/Automake changes.

05/20/2005 Bob Rossi <bob@brasko.net>

	* configure.in (--with-ncurses-prefix): Add CPPFLAGS.
	(--with-curses-prefix): Ditto.
	(--with-readline-prefix): Ditto.
	* configure: Auto generated.

05/20/2005 Bob Rossi <bob@brasko.net>

	* configure.in (VL_LIB_READLINE): Moved below --with-readline-prefix option.
	* configure: Auto generated.

05/19/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed a bug in CGDB that prevented it from working on several
	platforms.

05/16/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add some todo stuff before the next release.
	* configure.in: Add --with-readline-prefix option.
	* configure: Auto generated.

04/03/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add sf.net bug to be fixed for next release

04/03/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add DISTDIR problem to fix for next release

version 0.5.1 (04/02/2005):

04/02/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed another crash.

04/02/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update todo.

04/02/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Add message about obsoleting b and f commands.
	* README: Reformat and remove b and f commands.

04/01/2005 Bob Rossi <bob@brasko.net>

    * release-todo.txt: Update auto tool versions.

04/01/2005 Bob Rossi <bob@brasko.net>
   
   * README: Update autosourcereload option text.