@@ -1,11 +1,13 @@
-Bug fixes for cgdb-0.5.2
+Bug fixes for cgdb-0.5.3
 
-- Make DESTDIR work in Makefile for installing CGDB
-    http://sourceforge.net/mailarchive/forum.php?thread_id=6966700&forum_id=26100
 - Get ^L to refresh the screen
+
+Bug fixes for cgdb-0.5.2
 
 Closed:
 
+- Make DESTDIR work in Makefile for installing CGDB
+    http://sourceforge.net/mailarchive/forum.php?thread_id=6966700&forum_id=26100
 - Make the autoconf stuff check for version .5.1 of readline
 - Fix bug on sf.net. It is a compile error that happens to show up as a warning in
   cygwin. Fix the warning and the error might go away.
