@@ -5,8 +5,8 @@ AC_DEFUN([VL_LIB_READLINE], [
   AC_CACHE_CHECK([for a readline compatible library],
                  vl_cv_lib_readline, [
     ORIG_LIBS="$LIBS"
-    for readline_lib in readline edit editline; do
-      for termcap_lib in "" termcap curses ncurses; do
+    for readline_lib in readline; do
+      for termcap_lib in "" termcap ncurses curses; do
         if test -z "$termcap_lib"; then
           TRY_LIB="-l$readline_lib"
         else
