@@ -1,3 +1,11 @@
+05/23/2005 Bob Rossi <bob@brasko.net>
+
+	* RELEASE_TODO: Preparing some work to be done for .5.3.
+	* NEWS: Announcing changes for the next release.
+	* aclocal.m4: Autogenerated.
+	* configure: Autogenerated.
+	* config/readline.m4: Modified to only search for libreadline.
+
 05/21/2005 Bob Rossi <bob@brasko.net>
 
 	* configure.in (AM_INIT_AUTOMAKE): Version update.
